.provarCaches/00D410000011HE0EAM/objects/rstkf__apwhtcertgrp__c.object
<CustomObject>
    <description>apwhtcertgrp__c</description>
    <fields>
        <fullName>rstkf__apwhtcertgrp_certdate__c</fullName>
        <label>Certificate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcertgrp_certgroup__c</fullName>
        <label>Certificate Group Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcertgrp_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Withholding Tax Certificate Group</relationshipLabel>
        <relationshipName>apwhtcertgrps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcertgrp_frtxndate__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcertgrp_frvend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>From Vendor</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Withholding Tax Certificate Group</relationshipLabel>
        <relationshipName>apwhtcertgrps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcertgrp_totxndate__c</fullName>
        <label>Thru Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtcertgrp_tovend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Thru Vendor</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Withholding Tax Certificate Group (Thru Vendor)</relationshipLabel>
        <relationshipName>apwhtcertgrps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apwhtcertgrp_certgroup__c + &apos; (Created on &apos; +   TEXT(CreatedDate)  + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Withholding Tax Certificate Group</label>
    <nameField>
        <label>Withholding Tax Certificate Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Tax Certificate Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>